# Power_of_CPP_Template

./: CMakeLists.txt  README.md
BDF_Programmer_Training/: 01-poly-function_overloading.cpp  01-poly-operator_overloading.cpp  01-poly-overloading.cpp  02-poly-specialization.cpp  03-poly-ABC-virtual-functions.cpp  03-poly-ABC_virtual_functions.cpp  04-concept.cpp  04-type_traits.cpp  05-expression_template.cpp  06-expression_template.cpp  CMakeLists.txt
BDF_Programmer_Training/exercise/: 01-linear_algebra_interface.h
BDF_Programmer_Training/include/: basic.h  concept.example.h  polymorphism_example.h  typetraits_example.h
MetaProgramming/: CMakeLists.txt
MetaProgramming/Fusion/: 01-quick_start.cpp  02-Support.cpp  04-Iterator-Functions.cpp
MetaProgramming/Hana/: 01-quickstart.cpp  02-switch.cpp  03-compile_time_numbers.cpp
MetaProgramming/YAP/: 01-helloworld.cpp  02-helloworld2.cpp  03-calculator_1.cpp  04-calculator_2.cpp  05-calculator_3.cpp  06-calculator_4.cpp  07-lazy-vector.cpp  CMakeLists.txt
STL/: CMakeLists.txt
STL/Concurrency/: 01-sleep.cpp  02-thread.cpp  03-async.cpp  04-parallel-STL.cpp  05-mutex.cpp  06-atomic.cpp  07-call-once.cpp  08-producer-consumer.cpp  09-multi-producer-consumer.cpp  CMakeLists.txt
Template_MetaProgramming/: CMakeLists.txt  Makefile
Template_MetaProgramming/01-Fundamentals/: 01-Template_Parameter-01-TypeParameter.cpp  01-Template_Parameter-02-NonTypeParameter_1.cpp  01-Template_Parameter-02-NonTypeParameter_2.cpp  01-Template_Parameter-02-NonTypeParameter_3_auto.cpp  01-Template_Parameter-03-TemplateParameter_1.cpp  01-Template_Parameter-04-DefaultArgument.cpp  02-Template_Instantiation.cpp  04-Variable_Templates.cpp  05-Alias_Templates.cpp  06-Lambda.cpp  CMakeLists.txt  source1.cpp  wrapper.h
Template_MetaProgramming/02-Variadic_Templates/: 01-Preliminaries.cpp  02-ParameterPack.cpp  03-ParameterPacksExpansion.cpp  04-VariadicClassTemplates.cpp  05-FoldExpression.cpp  CMakeLists.txt
Template_MetaProgramming/03-AdvancedFeatures/: 01-Forward.cpp  02-decltype.cpp  03-TypeTraits-Basic.cpp  04-TypeTraits-SFINAE.cpp  05-TypeTraits-constexpr-if.cpp  06-TypeTraits-STL.cpp  07-TypeTraits-Examples-Copy.cpp  08-TypeTraits-Examples-CommonType.cpp  09-Concepts-Basic.cpp  10-Concepts-RequiresExpressions.cpp  11-Concepts-ComposingConstraints.cpp  12-Concepts-HowToConstrain.cpp  13-Concepts-STL.cpp
Template_MetaProgramming/04-Patterns/: 01-Static_Dynamic_Polymorphism.cpp  02-CRTP-basics.cpp  03-CRTP-LimitingObjectCount.cpp  04-CRTP-AddingFunc.cpp  05-CRTP-CompositeDesignPattern.cpp  06-CRTP-inSTL.cpp  07-Mixins.cpp  08-TypeErasure.cpp  09-TagDispatching.cpp  10-ExpressionTemplates.cpp  11-Typelists.cpp
Template_MetaProgramming/Fundamentals/: Makefile  Unexpected_Template_Paramter.cpp
